--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -24,4 +24,5 @@
     <string name="plant_registration">Cadastro de plantas</string>
     <string name="someone_watered_your_plants">Alguém regou suas plantas</string>
     <string name="login_error">Erro de login</string>
+    <string name="title_activity_main" translatable="false">Lista de plantas</string>
 </resources>
