--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Iplant</string>
-    <string name="title_activity_main" translatable="false">MainActivity</string>
     <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
     <string name="nav_header_title" translatable="false">Android Studio</string>
@@ -35,4 +34,5 @@
     <string name="equipment_code_is_required">Equipment code is required</string>
     <string name="plant_name_is_required">Plant name is required</string>
     <string name="dry">Dry</string>
+    <string name="title_activity_main">Plant list</string>
 </resources>
