--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -25,4 +25,14 @@
     <string name="someone_watered_your_plants">Alguém regou suas plantas</string>
     <string name="login_error">Erro de login</string>
     <string name="title_activity_main" translatable="false">Lista de plantas</string>
+    <string name="dry">Seco</string>
+    <string name="your_plant_wants_water">Sua planta quer água</string>
+    <string name="plant_name_is_required">O nome da planta é obrigatório</string>
+    <string name="equipment_code_is_required">O código do equipamento é obrigatório</string>
+    <string name="wrong_equipment_code">Código errado</string>
+    <string name="your_plant_is_fine">Sua planta está bem</string>
+    <string name="lots_of_water">Muita água, está chovendo?</string>
+    <string name="watering_but_still_needs_more_water">Regando, mas ainda precisa de mais água</string>
+    <string name="watering_you_can_turn_off_the_tap">Regando, pode desligar a torneira</string>
+    <string name="turn_off_the_tap_theres_plenty_of_water">Desliga a torneira, já tem muita água!</string>
 </resources>
